--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-commerce",
   "version": "0.1.0",
-  "homepage":"https://Hambardzumyan-Hovo.github.io/React-Redux-Shop",
+  "homepage": "https://Hambardzumyan-Hovo.github.io/React-Redux-Shop",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-number-format": "^4.4.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
